# enterprise-context-layer

./: .env.example  .gitignore  IMPLEMENTATION_STATUS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  main.py
cube/schema/: Revenue.js
docs/: ECP_STAKEHOLDER_ANALYSIS.md  ECP_TECHNICAL_ARCHITECTURE.md  EVAL_QUALITY.md  GAP_ANALYSIS_AND_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_CHECKLIST.md  PROMPT.md  SESSION_SUMMARY.md  demo-one-pager.md  intelligence.md  observability.md  runbook.md
docs/prd/: ECP-IMPLEMENTATION-PLAN.md  PLATFORM_PRD_vG.md  PLATFORM_TD_vG.md  enterprise-context-platform-spec.md
mcp_server/: __init__.py  server.py
openapi/: api.yaml
policies/: data_access.rego
scripts/: demo.sh  init_postgres.sh  schema_dw.sql  schema_registry.sql  schema_vectors.sql  seed_all.sh  seed_neo4j.cypher  seed_registry.sql  seed_vectors.sql
src/ecp/: __init__.py  config.py
src/ecp/adapters/: __init__.py  base.py  graph.py  policy.py  registry.py  semantic.py  vector.py
src/ecp/domain/: __init__.py  models.py
src/ecp/observability/: __init__.py  logging.py  metrics.py  middleware.py
src/ecp/orchestrator/: __init__.py  orchestrator.py
src/ecp/resilience/: __init__.py  circuit_breaker.py  degradation.py  exceptions.py  retry.py
tests/: __init__.py  conftest.py  test_api_contract.py  test_e2e.py  test_mcp_tools.py  test_observability.py  test_orchestrator.py
