[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-context-platform"
version = "0.1.0"
description = "Enterprise Context Platform - semantic mediation layer for agentic data access"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "ECP Team" }]
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "asyncpg>=0.29.0",
    "neo4j>=5.15.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "tenacity>=8.2.0",
    "pybreaker>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "mcp>=1.0.0",
]
mcp = ["mcp>=1.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
